--- a/front/package.json
+++ b/front/package.json
@@ -12,7 +12,8 @@
     "element-ui": "^2.4.5",
     "vue": "^2.6.11",
     "vue-aplayer": "^1.6.1",
-    "vue-router": "^3.1.5"
+    "vue-router": "^3.1.5",
+    "zjj-components": "^0.1.7"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
